--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,6 @@ deploy:
   github-token: $GH_TOKEN
   keep-history: true
   on:
-    branch: master
+    target_branch: master
     all_branches: true
   local-dir: public
