--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,10 @@ branches:
   only:
     - feat/1.0.1 # build master branch only
 script:
+  - git clone https://github.com/LouisBarranqueiro/hexo-theme-tranquilpeak.git themes/hexo-theme-tranquilpeak
+  - cd themes/hexo-theme-tranquilpeak
+  - npm i
+  - cd ../.. 
   - hexo generate # generate static files
 deploy:
   provider: pages
