--- a/_config.yml
+++ b/_config.yml
@@ -3,17 +3,17 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: Hexo
+title: ⭐Shadow Moon⭐
 subtitle: ''
 description: ''
 keywords:
-author: John Doe
-language: en
+author: 泛银河系函数爆破液
+language: zh-CN
 timezone: ''
 
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
-url: https://slartbartfast1.github.io
+url: https://howhowlab.com
 root: /
 permalink: :year/:month/:day/:title/
 permalink_defaults:
@@ -93,7 +93,7 @@ ignore:
 # Extensions
 ## Plugins: https://hexo.io/plugins/
 ## Themes: https://hexo.io/themes/
-theme: landscape
+theme: hexo-theme-butterfly
 
 # Deployment
 ## Docs: https://hexo.io/docs/deployment.html
