--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "build": "hexo generate",
     "clean": "hexo clean",
     "deploy": "hexo deploy",
-    "server": "hexo server -p 80"
+    "server": "hexo server -p 80",
+    "theme":"cd themes && git clone git@github.com:Slartbartfast1/hexo-theme-butterfly-particular.git",
+    "pull":"cd themes/hexo-theme-butterfly-particular && git pull "
   },
   "hexo": {
     "version": "4.2.1"
